# ros_senior

./: README.md
action_sample/: CMakeLists.txt  package.xml
action_sample/action/: DoDishes.action
action_sample/launch/: start_cpp.launch  start_py.launch
action_sample/scripts/: DoDishes_client.py  DoDishes_server.py
action_sample/src/: DoDishes_client.cpp  DoDishes_server.cpp
ar_track_alvar/: CMakeLists.txt  package.xml  qr_code_read.launch
ar_track_alvar/launch/: qr_code_read.launch
ar_track_alvar/nodes/: FindMarkerBundles.cpp  FindMarkerBundlesNoKinect.cpp  IndividualMarkers.cpp  IndividualMarkersNoKinect.cpp  TrainMarkerBundle.cpp
doc/: ros进阶学习.txt
ifly_spark/: AIKit-Spark_Linux_v2.4.md
ifly_spark/demo/: README.md  build.sh  run.sh  sparkDemo.cpp  sparkDemo.h
learning_launch/: CMakeLists.txt  package.xml
learning_launch/config/: param.yaml
learning_launch/launch/: double_mimic_draw_cycle_square.launch  mimic_draw_cycle.launch  mimic_draw_square.launch  tmp.launch  turtlemimic.launch  turtlesim1.launch  turtlesim2.launch  two_turtlesim.launch
learning_launch/read_other/: test1.launch
learning_tf/: CMakeLists.txt  package.xml
learning_tf/doc/: frames.gv
learning_tf/launch/: start_cpp.launch  start_py.launch
learning_tf/scripts/: turtle_tf_broadcaster.py  turtle_tf_listener.py
learning_tf/src/: turtle_tf_listener.cpp  (+1 more)
learning_tf_homework/: CMakeLists.txt  package.xml
mbot_description/: CMakeLists.txt  package.xml
mbot_gazebo/: CMakeLists.txt  package.xml
mbot_navigation/: CMakeLists.txt  package.xml
qr_detector/: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  nodelets.xml  package.xml
qr_detector/include/qr_detector/: detector.h  qr_detector_nodelet.h
qr_detector/launch/: detector.launch
qr_detector/src/: detector.cpp  qr_detector_nodelet.cpp
robot_hunt_maze/: CMakeLists.txt  package.xml
robot_vision/: CMakeLists.txt  nodelets.xml  package.xml
robot_voice/: CMakeLists.txt  package.xml
yolov5_ros/: CMakeLists.txt
(+106 files in other folders)
